--- a/src/FacturaElectronica.Common/FacturaElectronica.Common.csproj
+++ b/src/FacturaElectronica.Common/FacturaElectronica.Common.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,15 +58,18 @@
     <Compile Include="Contracts\LogCorridaDto.cs" />
     <Compile Include="Contracts\ObservacionComprobanteDto.cs" />
     <Compile Include="Contracts\RolDto.cs" />
+    <Compile Include="Contracts\Search\CorridaSearch.cs" />
     <Compile Include="Contracts\TipoComprobanteDto.cs" />
     <Compile Include="Contracts\UsuarioDto.cs" />
     <Compile Include="Contracts\WebServiceAfipDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IProcesoCorridaService.cs" />
     <Compile Include="Services\IClienteService.cs" />
     <Compile Include="Services\IComprobanteService.cs" />
     <Compile Include="Services\ICorridaService.cs" />
     <Compile Include="Services\IMaestrosService.cs" />
     <Compile Include="Services\ISeguridadService.cs" />
+    <Compile Include="Services\IWsServiceAfip.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FacturaElectronica.Afip.Ws\FacturaElectronica.Afip.Ws.csproj">
