--- a/src/FacturaElectronica.Facade/FacturaElectronica.Facade.csproj
+++ b/src/FacturaElectronica.Facade/FacturaElectronica.Facade.csproj
@@ -2,20 +2,18 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{FA5F205C-1A5C-40DD-87D4-F375D52CA454}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{B14207AF-1D3D-4158-805E-6C8C95A895AD}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FacturaElectronica.Afip.TestClient</RootNamespace>
-    <AssemblyName>FacturaElectronica.Afip.TestClient</AssemblyName>
+    <RootNamespace>FacturaElectronica.Facade</RootNamespace>
+    <AssemblyName>FacturaElectronica.Facade</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,8 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -34,10 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,7 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="AfipWrapperService.cs" />
+    <Compile Include="ProcesoCorridaService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -57,13 +55,14 @@
       <Project>{5782691D-FFA4-448C-97FC-224E8EBE1D7F}</Project>
       <Name>FacturaElectronica.Afip.Ws</Name>
     </ProjectReference>
+    <ProjectReference Include="..\FacturaElectronica.Business\FacturaElectronica.Business.csproj">
+      <Project>{EDB6E9BA-CD60-4D99-AF5B-18024D10DF2A}</Project>
+      <Name>FacturaElectronica.Business</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FacturaElectronica.Common\FacturaElectronica.Common.csproj">
       <Project>{32774052-7837-4A33-8A3C-C80FCAB5EA1E}</Project>
       <Name>FacturaElectronica.Common</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
