--- a/src/FacturaElectronica.Ui.Win.Administrador/App.config
+++ b/src/FacturaElectronica.Ui.Win.Administrador/App.config
@@ -1,55 +1,95 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <connectionStrings>
-    <add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\sql2008;Initial Catalog=FacturaElectronica;Persist Security Info=True;User ID=factura;Password=factura;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
-  </connectionStrings>
-  <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="LoginCmsSoapBinding" closeTimeout="00:01:00" openTimeout="00:01:00"
-            receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
-            bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-            maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-            messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
-            useDefaultWebProxy="true">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-              maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-          <security mode="Transport">
-            <transport clientCredentialType="None" proxyCredentialType="None"
-                realm="" />
-            <message clientCredentialType="UserName" algorithmSuite="Default" />
-          </security>
-        </binding>
-        <binding name="ServiceSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
-            receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
-            bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-            maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-            messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
-            useDefaultWebProxy="true">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-              maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-          <security mode="Transport">
-            <transport clientCredentialType="None" proxyCredentialType="None"
-                realm="" />
-            <message clientCredentialType="UserName" algorithmSuite="Default" />
-          </security>
-        </binding>
-      </basicHttpBinding>
-    </bindings>
-    <client>
-      <endpoint address="https://wsaahomo.afip.gov.ar/ws/services/LoginCms"
-          binding="basicHttpBinding" bindingConfiguration="LoginCmsSoapBinding"
-          contract="Wsaa.LoginCMS" name="LoginCms" />
-      <endpoint address="https://wswhomo.afip.gov.ar/wsfev1/service.asmx"
-          binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
-          contract="Wsfe.ServiceSoap" name="ServiceSoap" />
-    </client>
-  </system.serviceModel>
   <appSettings>
+    <add key="PathDestinoArchivosXMLParaProcesar" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\ArchivosXml" />
+  </appSettings>
+
+  <!--<appSettings>
     <add key="idServicioNegocio" value="wsfe" />
     <add key="certSigner" value="C=AR, O=ENDESA, SERIALNUMBER=CUIT 23289508759, CN=TestFE" />
     <add key="cuit" value="23289508759" />
     <add key="storeName" value="TrustedPeople" />
     <add key="storeLocation" value="CurrentUser" />
-  </appSettings>
+  </appSettings>-->
+
+  <!--<connectionStrings>
+    <add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\sql2008;Initial Catalog=FacturaElectronica;Persist Security Info=True;User ID=factura;Password=factura;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
+  </connectionStrings>-->
+  <system.serviceModel>
+    <bindings>
+      <wsHttpBinding>
+        <binding name="WSHttpBinding_IProcesoCorridaService" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text"
+          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <reliableSession ordered="true" inactivityTimeout="00:10:00"
+            enabled="false" />
+          <security mode="Message">
+            <transport clientCredentialType="Windows" proxyCredentialType="None"
+              realm="" />
+            <message clientCredentialType="Windows" negotiateServiceCredential="true"
+              algorithmSuite="Default" />
+          </security>
+        </binding>
+        <binding name="WSHttpBinding_IMaestrosService" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text"
+          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <reliableSession ordered="true" inactivityTimeout="00:10:00"
+            enabled="false" />
+          <security mode="Message">
+            <transport clientCredentialType="Windows" proxyCredentialType="None"
+              realm="" />
+            <message clientCredentialType="Windows" negotiateServiceCredential="true"
+              algorithmSuite="Default" />
+          </security>
+        </binding>
+        <binding name="WSHttpBinding_IAfipWrapperService" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text"
+          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <reliableSession ordered="true" inactivityTimeout="00:10:00"
+            enabled="false" />
+          <security mode="Message">
+            <transport clientCredentialType="Windows" proxyCredentialType="None"
+              realm="" />
+            <message clientCredentialType="Windows" negotiateServiceCredential="true"
+              algorithmSuite="Default" />
+          </security>
+        </binding>
+      </wsHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:1500/ProcesoCorridaService.svc"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IProcesoCorridaService"
+        contract="ServiceReferenceCorrida.IProcesoCorridaService" name="WSHttpBinding_IProcesoCorridaService">
+        <identity>
+          <userPrincipalName value="Adrian-HP\Adrian" />
+        </identity>
+      </endpoint>
+      <endpoint address="http://localhost:1500/MaestroService.svc"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IMaestrosService"
+        contract="ServiceReferenceMaestro.IMaestrosService" name="WSHttpBinding_IMaestrosService">
+        <identity>
+          <userPrincipalName value="Adrian-HP\Adrian" />
+        </identity>
+      </endpoint>
+      <endpoint address="http://localhost:1500/AfipWrapperService.svc"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAfipWrapperService"
+        contract="ServiceReferenceAfipWrapper.IAfipWrapperService" name="WSHttpBinding_IAfipWrapperService">
+        <identity>
+          <userPrincipalName value="Adrian-HP\Adrian" />
+        </identity>
+      </endpoint>
+    </client>
+  </system.serviceModel>
 </configuration>
