--- a/src/FacturaElectronica.Common/FacturaElectronica.Common.csproj
+++ b/src/FacturaElectronica.Common/FacturaElectronica.Common.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Constants\CodigoEstadoCbte.cs" />
+    <Compile Include="Constants\CodigosEstadoArchivoAsociado.cs" />
     <Compile Include="Constants\ResultadoCbte.cs" />
     <Compile Include="Constants\ResultadoCorrida.cs" />
     <Compile Include="Contracts\ComprobanteArchivoAsociadoDto.cs" />
@@ -60,7 +60,9 @@
     <Compile Include="Contracts\RolDto.cs" />
     <Compile Include="Contracts\Search\CorridaSearch.cs" />
     <Compile Include="Contracts\TipoComprobanteDto.cs" />
+    <Compile Include="Contracts\TipoContratoDto.cs" />
     <Compile Include="Contracts\UsuarioDto.cs" />
+    <Compile Include="Contracts\VisualizacionComprobanteDto.cs" />
     <Compile Include="Contracts\WebServiceAfipDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IProcesoCorridaService.cs" />
@@ -77,6 +79,7 @@
       <Name>FacturaElectronica.Afip.Ws</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
