--- a/src/FacturaElectronica.Ui.Win.Administrador/App.config
+++ b/src/FacturaElectronica.Ui.Win.Administrador/App.config
@@ -16,6 +16,17 @@
     <add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\sql2008;Initial Catalog=FacturaElectronica;Persist Security Info=True;User ID=factura;Password=factura;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>-->
   <system.serviceModel>
+    <behaviors>
+      <endpointBehaviors>
+        <behavior name="noRevocation">
+        <clientCredentials>
+          <serviceCertificate>
+            <authentication revocationMode="NoCheck" />
+          </serviceCertificate>
+        </clientCredentials>            
+      </behavior>
+      </endpointBehaviors>      
+    </behaviors>
     <bindings>
       <wsHttpBinding>
         <binding name="WSHttpBinding_IProcesoCorridaService" closeTimeout="00:01:00"
@@ -27,11 +38,9 @@
             maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
             enabled="false" />
-          <security mode="Message">
-            <transport clientCredentialType="Windows" proxyCredentialType="None"
-              realm="" />
-            <message clientCredentialType="Windows" negotiateServiceCredential="true"
-              algorithmSuite="Default" />
+          <security mode="TransportWithMessageCredential">
+            <transport clientCredentialType="None" proxyCredentialType="None"/>
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
         </binding>
         <binding name="WSHttpBinding_IMaestrosService" closeTimeout="00:01:00"
@@ -43,12 +52,11 @@
             maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
             enabled="false" />
-          <security mode="Message">
-            <transport clientCredentialType="Windows" proxyCredentialType="None"
-              realm="" />
-            <message clientCredentialType="Windows" negotiateServiceCredential="true"
-              algorithmSuite="Default" />
+          <security mode="TransportWithMessageCredential">
+            <transport clientCredentialType="None" proxyCredentialType="None"/>
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
+          
         </binding>
         <binding name="WSHttpBinding_IAfipWrapperService" closeTimeout="00:01:00"
           openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
@@ -59,37 +67,54 @@
             maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
             enabled="false" />
-          <security mode="Message">
-            <transport clientCredentialType="Windows" proxyCredentialType="None"
-              realm="" />
-            <message clientCredentialType="Windows" negotiateServiceCredential="true"
-              algorithmSuite="Default" />
+          <security mode="TransportWithMessageCredential">
+            <transport clientCredentialType="None" proxyCredentialType="None"/>
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
         </binding>
       </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:1500/ProcesoCorridaService.svc"
+      <endpoint address="https://endesafews/ProcesoCorridaService.svc" 
         binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IProcesoCorridaService"
-        contract="ServiceReferenceCorrida.IProcesoCorridaService" name="WSHttpBinding_IProcesoCorridaService">
-        <identity>
-          <userPrincipalName value="Adrian-HP\Adrian" />
-        </identity>
+        contract="ServiceReferenceCorrida.IProcesoCorridaService" name="WSHttpBinding_IProcesoCorridaService">                       
       </endpoint>
-      <endpoint address="http://localhost:1500/MaestroService.svc"
+      <endpoint address="https://endesafews/MaestroService.svc" 
         binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IMaestrosService"
-        contract="ServiceReferenceMaestro.IMaestrosService" name="WSHttpBinding_IMaestrosService">
-        <identity>
-          <userPrincipalName value="Adrian-HP\Adrian" />
-        </identity>
+        contract="ServiceReferenceMaestro.IMaestrosService" name="WSHttpBinding_IMaestrosService">      
       </endpoint>
-      <endpoint address="http://localhost:1500/AfipWrapperService.svc"
+      <endpoint address="https://endesafews/AfipWrapperService.svc" 
         binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAfipWrapperService"
-        contract="ServiceReferenceAfipWrapper.IAfipWrapperService" name="WSHttpBinding_IAfipWrapperService">
-        <identity>
-          <userPrincipalName value="Adrian-HP\Adrian" />
-        </identity>
+        contract="ServiceReferenceAfipWrapper.IAfipWrapperService" name="WSHttpBinding_IAfipWrapperService">    
       </endpoint>
     </client>
+    
+    <diagnostics>
+      <messageLogging logEntireMessage="true"
+        maxMessagesToLog="300" logMessagesAtServiceLevel="true"
+        logMalformedMessages="true" logMessagesAtTransportLevel="true"/>
+    </diagnostics>
+    
   </system.serviceModel>
+
+  <system.diagnostics>
+    <sources>
+      <source name="System.ServiceModel" switchValue="Information,ActivityTracing, Error" propagateActivity="true">
+        <listeners>
+          <add name="xml"/>
+        </listeners>
+      </source>
+      <source name="System.ServiceModel.MessageLogging">
+        <listeners>
+          <add name="xml"/>
+        </listeners>
+      </source>
+    </sources>
+    <sharedListeners>
+      <add initializeData="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\WcfTrace\serviceclient2.svclog"
+    type="System.Diagnostics.XmlWriterTraceListener" name="xml"/>
+    </sharedListeners>
+    <trace autoflush="true"/>
+  </system.diagnostics>
+
 </configuration>
