--- a/src/FacturaElectronica.Ui.Win.Administrador/FacturaElectronica.Ui.Win.Administrador.csproj
+++ b/src/FacturaElectronica.Ui.Win.Administrador/FacturaElectronica.Ui.Win.Administrador.csproj
@@ -49,7 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Code\Cert\CertUtil.cs" />
     <Compile Include="Code\Corrida\AfipWrapperWcfProxy.cs" />
+    <Compile Include="Code\Corrida\ClientCredentialHelper.cs" />
     <Compile Include="Code\Corrida\MaestroServiceProxy.cs" />
     <Compile Include="Code\Corrida\ProcesoCorridaWcfProxy.cs" />
     <Compile Include="Code\ServiceFactory.cs" />
