--- a/src/FacturaElectronica.Ws.Host/FacturaElectronica.Ws.Host.csproj
+++ b/src/FacturaElectronica.Ws.Host/FacturaElectronica.Ws.Host.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.IdentityModel" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
@@ -55,7 +56,9 @@
     <Content Include="AfipWrapperService.svc" />
     <Content Include="MaestroService.svc" />
     <Content Include="ProcesoCorridaService.svc" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -64,9 +67,18 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Code\CustomValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\..\..\..\Lacoste\Codigo\ApiAutenticacion\trunk\src\WebFramework\Web.Framework.csproj">
+      <Project>{0EEED093-28DA-4ACB-BC25-E961C55E72C6}</Project>
+      <Name>Web.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\..\..\..\..\Lacoste\Codigo\PlanProduccion\trunk\src\Web.Framework.Svc\Web.Framework.Svc.csproj">
+      <Project>{272A4403-5F67-4EE0-A52E-C7A744230563}</Project>
+      <Name>Web.Framework.Svc</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FacturaElectronica.Business\FacturaElectronica.Business.csproj">
       <Project>{EDB6E9BA-CD60-4D99-AF5B-18024D10DF2A}</Project>
       <Name>FacturaElectronica.Business</Name>
@@ -86,12 +98,13 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>False</UseIIS>
+          <UseIIS>True</UseIIS>
           <AutoAssignPort>False</AutoAssignPort>
           <DevelopmentServerPort>1500</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>
-          </IISUrl>
+          <IISUrl>https://localhost/FacturaElectronicaWsHost</IISUrl>
+          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
+          <IISAppRootUrl>https://localhost/FacturaElectronicaWsHost</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
