--- a/src/FacturaElectronica.Ws.Host/Web.config
+++ b/src/FacturaElectronica.Ws.Host/Web.config
@@ -12,18 +12,20 @@
     <add key="certSigner" value="C=AR, O=ENDESA, SERIALNUMBER=CUIT 23289508759, CN=TestFE" />
     <add key="cuit" value="23289508759" />
     <add key="storeName" value="TrustedPeople" />
-    <add key="storeLocation" value="CurrentUser" />
+    <add key="storeLocation" value="LocalMachine" />
+    <!--CurrentUser-->
   </appSettings>
 
   <connectionStrings>
     <add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\sql2008;Initial Catalog=FacturaElectronica;Persist Security Info=True;User ID=factura;Password=factura;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
-  
+
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
   </system.web>
 
   <system.serviceModel>
+
     <bindings>
       <basicHttpBinding>
         <binding name="LoginCmsSoapBinding" closeTimeout="00:01:00" openTimeout="00:01:00"
@@ -66,6 +68,15 @@
               maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
               enabled="false" />
+          <security mode="TransportWithMessageCredential">
+            <transport clientCredentialType="None" proxyCredentialType="None"/>
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
+          </security>
+          <!--<security mode="Message">
+            <transport clientCredentialType="None" proxyCredentialType="None"
+              realm="" />
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
+          </security>-->
         </binding>
         <binding name="WSHttpBinding_IMaestroService" closeTimeout="00:01:00"
             openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
@@ -77,6 +88,10 @@
               maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
               enabled="false" />
+          <security mode="TransportWithMessageCredential">
+            <transport clientCredentialType="None" proxyCredentialType="None"/>
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
+          </security>
         </binding>
         <binding name="WSHttpBinding_IAfipWrapperService" closeTimeout="00:01:00"
            openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
@@ -88,17 +103,22 @@
               maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00"
               enabled="false" />
+          <security mode="TransportWithMessageCredential">
+            <transport clientCredentialType="None" proxyCredentialType="None"/>
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
+          </security>
         </binding>
       </wsHttpBinding>
     </bindings>
     <services>
+
       <service name="FacturaElectronica.Facade.ProcesoCorridaService" behaviorConfiguration="ProcesoCorridaBehavior" >
         <endpoint address=""
                   binding="wsHttpBinding"
                   bindingConfiguration="WSHttpBinding_IProcesoCorridaService"
                   contract="FacturaElectronica.Common.Services.IProcesoCorridaService" />
         <endpoint address="mex"
-                  binding="mexHttpBinding"
+                  binding="mexHttpsBinding"
                   contract="IMetadataExchange" />
       </service>
       <service name="FacturaElectronica.Business.Services.MaestrosSevice" behaviorConfiguration="ProcesoCorridaBehavior" >
@@ -107,7 +127,7 @@
                   bindingConfiguration="WSHttpBinding_IMaestroService"
                   contract="FacturaElectronica.Common.Services.IMaestrosService" />
         <endpoint address="mex"
-                  binding="mexHttpBinding"
+                  binding="mexHttpsBinding"
                   contract="IMetadataExchange" />
       </service>
       <service name="FacturaElectronica.Afip.Business.Wsfe.WsfeClient" behaviorConfiguration="ProcesoCorridaBehavior" >
@@ -116,17 +136,22 @@
                   bindingConfiguration="WSHttpBinding_IAfipWrapperService"
                   contract="FacturaElectronica.Common.Services.IAfipWrapperService" />
         <endpoint address="mex"
-                  binding="mexHttpBinding"
+                  binding="mexHttpsBinding"
                   contract="IMetadataExchange" />
       </service>
-    </services>    
+    </services>
     <behaviors>
       <serviceBehaviors>
         <behavior name="ProcesoCorridaBehavior">
-          <serviceMetadata httpGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="false" />
+          <serviceMetadata httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
           <dataContractSerializer maxItemsInObjectGraph="2147483646"/>
           <WebFrameworkFaultBehavior />
+          <serviceCredentials>
+            <userNameAuthentication
+            userNamePasswordValidationMode="Custom"
+            customUserNamePasswordValidatorType="FacturaElectronica.Ws.Host.Code.CustomValidator,FacturaElectronica.Ws.Host" />
+          </serviceCredentials>
         </behavior>
       </serviceBehaviors>
     </behaviors>
@@ -145,7 +170,35 @@
         contract="Wsaa.LoginCMS" name="LoginCms" />
       <endpoint address="https://wswhomo.afip.gov.ar/wsfev1/service.asmx"
         binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
-        contract="Wsfe.ServiceSoap" name="ServiceSoap" />    
+        contract="Wsfe.ServiceSoap" name="ServiceSoap" />
     </client>
+
+    <diagnostics>
+      <messageLogging logEntireMessage="true"
+        maxMessagesToLog="300" logMessagesAtServiceLevel="true"
+        logMalformedMessages="true" logMessagesAtTransportLevel="true"/>
+    </diagnostics>
+
   </system.serviceModel>
+
+  <system.diagnostics>
+    <sources>
+      <source name="System.ServiceModel" switchValue="Information,ActivityTracing, Error" propagateActivity="true">
+        <listeners>
+          <add name="xml"/>
+        </listeners>
+      </source>
+      <source name="System.ServiceModel.MessageLogging">
+        <listeners>
+          <add name="xml"/>
+        </listeners>
+      </source>
+    </sources>
+    <sharedListeners>
+      <add initializeData="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\WcfTrace\service2.svclog"
+    type="System.Diagnostics.XmlWriterTraceListener" name="xml"/>
+    </sharedListeners>
+    <trace autoflush="true"/>
+  </system.diagnostics>
+
 </configuration>
