--- a/src/FacturaElectronica.Ui.Web/Web.config
+++ b/src/FacturaElectronica.Ui.Web/Web.config
@@ -6,9 +6,9 @@
 <configuration>
 	<connectionStrings>
 		<add name="ApplicationServices" connectionString="data source=.\SQL2008STD;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
-		<add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\sql2008;Initial Catalog=FacturaElectronica;Persist Security Info=True;User ID=factura;Password=factura;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
-	</connectionStrings>
-	<system.web>
+		<add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQL2008STD;Initial Catalog=FacturaElectronica;Persist Security Info=True;User ID=factura;Password=factura;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
+	</connectionStrings>  
+	<system.web>    
 		<compilation debug="true" targetFramework="4.0">
 			<assemblies>
 				<add assembly="System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -21,6 +21,7 @@
 				<add assembly="System.Xml, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
 				<add assembly="System.Data, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
 				<add assembly="System.Web.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/></assemblies></compilation>
+    <globalization culture="es-AR" uiCulture="es-AR"/>
 		<authentication mode="Forms">
 			<forms loginUrl="~/Account/Login.aspx" timeout="2880"/>
 		</authentication>
