--- a/src/FacturaElectronica.Ui.Web/Web.config
+++ b/src/FacturaElectronica.Ui.Web/Web.config
@@ -6,7 +6,7 @@
 <configuration>
 	<connectionStrings>
 		<add name="ApplicationServices" connectionString="data source=.\SQL2008STD;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
-		<add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\sql2008;Initial Catalog=FacturaElectronica;Persist Security Info=True;User ID=factura;Password=factura;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
+		<add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQL2008;Initial Catalog=FacturaElectronica;Persist Security Info=True;User ID=factura;Password=factura;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
 	</connectionStrings>  
 	<system.web>    
 		<compilation debug="true" targetFramework="4.0">
@@ -22,30 +22,41 @@
 				<add assembly="System.Data, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
 				<add assembly="System.Web.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/></assemblies></compilation>
     <globalization culture="es-AR" uiCulture="es-AR"/>
-		<authentication mode="Forms">
-			<forms loginUrl="~/Account/Login.aspx" timeout="2880"/>
+   
+    <authentication mode="Forms">
+			<forms loginUrl="~/Account/Login.aspx" 
+             defaultUrl="~/Default.aspx" 
+             timeout="2880"/>
 		</authentication>
-		<membership>
-			<providers>
-				<clear/>
-				<add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/"/>
-			</providers>
-		</membership>
-		<profile>
-			<providers>
-				<clear/>
-				<add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/"/>
-			</providers>
-		</profile>
-		<roleManager enabled="false">
-			<providers>
-				<clear/>
-				<add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/"/>
-				<add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/"/>
-			</providers>
-		</roleManager>
+    <authorization>
+      <deny users="?"/>
+    </authorization>
 	</system.web>
-	<system.webServer>
-		<modules runAllManagedModulesForAllRequests="true"/>
+  <location path="Styles">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="Scripts">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="Images">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <system.webServer>
+		<!--<modules runAllManagedModulesForAllRequests="true"/> -->
 	</system.webServer>
+  <appSettings>
+    <add key="cantUltimosReg" value="5"/>
+  </appSettings>
 </configuration>
