--- a/src/FacturaElectronica.Ws.Host/Web.config
+++ b/src/FacturaElectronica.Ws.Host/Web.config
@@ -8,6 +8,8 @@
 <configuration>
 
   <appSettings>
+    <add key="PathDestinoArchivosAFIPParaProcesar" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\ArchivosXml" />
+    <add key="PathDestinoArchivosFacturaConCAE" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\ArchivosPDF" />
     <add key="idServicioNegocio" value="wsfe" />
     <add key="certSigner" value="C=AR, O=ENDESA, SERIALNUMBER=CUIT 23289508759, CN=TestFE" />
     <add key="cuit" value="23289508759" />
