--- a/src/FacturaElectronica.Afip.TestClient/App.config
+++ b/src/FacturaElectronica.Afip.TestClient/App.config
@@ -1,45 +1,27 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="LoginCmsSoapBinding" closeTimeout="00:01:00" openTimeout="00:01:00"
-            receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
-            bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-            maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-            messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
-            useDefaultWebProxy="true">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-              maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+        <binding name="LoginCmsSoapBinding" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard" maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered" useDefaultWebProxy="true">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
           <security mode="Transport">
-            <transport clientCredentialType="None" proxyCredentialType="None"
-                realm="" />
-            <message clientCredentialType="UserName" algorithmSuite="Default" />
+            <transport clientCredentialType="None" proxyCredentialType="None" realm=""/>
+            <message clientCredentialType="UserName" algorithmSuite="Default"/>
           </security>
         </binding>
-        <binding name="ServiceSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
-            receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
-            bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-            maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-            messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
-            useDefaultWebProxy="true">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-              maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+        <binding name="ServiceSoap" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard" maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered" useDefaultWebProxy="true">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
           <security mode="Transport">
-            <transport clientCredentialType="None" proxyCredentialType="None"
-                realm="" />
-            <message clientCredentialType="UserName" algorithmSuite="Default" />
+            <transport clientCredentialType="None" proxyCredentialType="None" realm=""/>
+            <message clientCredentialType="UserName" algorithmSuite="Default"/>
           </security>
         </binding>
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://wsaahomo.afip.gov.ar/ws/services/LoginCms"
-          binding="basicHttpBinding" bindingConfiguration="LoginCmsSoapBinding"
-          contract="Wsaa.LoginCMS" name="LoginCms" />
-      <endpoint address="https://wswhomo.afip.gov.ar/wsfev1/service.asmx"
-          binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
-          contract="Wsfe.ServiceSoap" name="ServiceSoap" />
+      <endpoint address="https://wsaahomo.afip.gov.ar/ws/services/LoginCms" binding="basicHttpBinding" bindingConfiguration="LoginCmsSoapBinding" contract="Wsaa.LoginCMS" name="LoginCms"/>
+      <endpoint address="https://wswhomo.afip.gov.ar/wsfev1/service.asmx" binding="basicHttpBinding" bindingConfiguration="ServiceSoap" contract="Wsfe.ServiceSoap" name="ServiceSoap"/>
     </client>
   </system.serviceModel>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
