--- a/src/FacturaElectronica.Ui.Web/FacturaElectronica.Ui.Web.csproj
+++ b/src/FacturaElectronica.Ui.Web/FacturaElectronica.Ui.Web.csproj
@@ -298,9 +298,17 @@
     <Content Include="Site.Master" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\..\VesubioSVN\vesuapiauth\trunk\src\WebFramework\Web.Framework.csproj">
+    <ProjectReference Include="..\..\..\..\..\..\..\..\Lacoste\Codigo\ApiAutenticacion\trunk\src\WebFramework\Web.Framework.csproj">
       <Project>{0EEED093-28DA-4ACB-BC25-E961C55E72C6}</Project>
       <Name>Web.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\..\..\..\..\Lacoste\Codigo\PlanProduccion\trunk\src\Web.Framework.Svc\Web.Framework.Svc.csproj">
+      <Project>{272A4403-5F67-4EE0-A52E-C7A744230563}</Project>
+      <Name>Web.Framework.Svc</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FacturaElectronica.Afip.Business\FacturaElectronica.Afip.Business.csproj">
+      <Project>{AE2952B6-C7D3-4C5B-ADC2-97C08D01B593}</Project>
+      <Name>FacturaElectronica.Afip.Business</Name>
     </ProjectReference>
     <ProjectReference Include="..\FacturaElectronica.Business\FacturaElectronica.Business.csproj">
       <Project>{EDB6E9BA-CD60-4D99-AF5B-18024D10DF2A}</Project>
