--- a/src/FacturaElectronica.Ui.Win.Administrador/App.config
+++ b/src/FacturaElectronica.Ui.Win.Administrador/App.config
@@ -1,7 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="PathDestinoArchivosXMLParaProcesar" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\ArchivosXml" />
+    <add key="PathDestinoArchivosAFIPParaProcesar" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\ArchivosXml"/>
+    <add key="PathDestinoArchivosFacturaConCAE" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\ArchivosPDF"/>
   </appSettings>
 
   <!--<appSettings>
@@ -19,82 +20,56 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="noRevocation">
-        <clientCredentials>
-          <serviceCertificate>
-            <authentication revocationMode="NoCheck" />
-          </serviceCertificate>
-        </clientCredentials>            
-      </behavior>
-      </endpointBehaviors>      
+          <clientCredentials>
+            <serviceCertificate>
+              <authentication revocationMode="NoCheck"/>
+            </serviceCertificate>
+          </clientCredentials>
+        </behavior>
+      </endpointBehaviors>
     </behaviors>
     <bindings>
       <wsHttpBinding>
-        <binding name="WSHttpBinding_IProcesoCorridaService" closeTimeout="00:01:00"
-          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text"
-          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-          <reliableSession ordered="true" inactivityTimeout="00:10:00"
-            enabled="false" />
+        <binding name="WSHttpBinding_IProcesoCorridaService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
+          <reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false"/>
           <security mode="TransportWithMessageCredential">
             <transport clientCredentialType="None" proxyCredentialType="None"/>
-            <message clientCredentialType="UserName" algorithmSuite="Default" />
+            <message clientCredentialType="UserName" algorithmSuite="Default"/>
           </security>
         </binding>
-        <binding name="WSHttpBinding_IMaestrosService" closeTimeout="00:01:00"
-          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text"
-          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-          <reliableSession ordered="true" inactivityTimeout="00:10:00"
-            enabled="false" />
+        <binding name="WSHttpBinding_IMaestrosService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
+          <reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false"/>
           <security mode="TransportWithMessageCredential">
             <transport clientCredentialType="None" proxyCredentialType="None"/>
-            <message clientCredentialType="UserName" algorithmSuite="Default" />
+            <message clientCredentialType="UserName" algorithmSuite="Default"/>
           </security>
-          
+
         </binding>
-        <binding name="WSHttpBinding_IAfipWrapperService" closeTimeout="00:01:00"
-          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text"
-          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-          <reliableSession ordered="true" inactivityTimeout="00:10:00"
-            enabled="false" />
+        <binding name="WSHttpBinding_IAfipWrapperService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
+          <reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false"/>
           <security mode="TransportWithMessageCredential">
             <transport clientCredentialType="None" proxyCredentialType="None"/>
-            <message clientCredentialType="UserName" algorithmSuite="Default" />
+            <message clientCredentialType="UserName" algorithmSuite="Default"/>
           </security>
         </binding>
       </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://endesafews/ProcesoCorridaService.svc" 
-        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IProcesoCorridaService"
-        contract="ServiceReferenceCorrida.IProcesoCorridaService" name="WSHttpBinding_IProcesoCorridaService">                       
+      <endpoint address="https://endesafews/ProcesoCorridaService.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IProcesoCorridaService" contract="ServiceReferenceCorrida.IProcesoCorridaService" name="WSHttpBinding_IProcesoCorridaService">
       </endpoint>
-      <endpoint address="https://endesafews/MaestroService.svc" 
-        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IMaestrosService"
-        contract="ServiceReferenceMaestro.IMaestrosService" name="WSHttpBinding_IMaestrosService">      
+      <endpoint address="https://endesafews/MaestroService.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IMaestrosService" contract="ServiceReferenceMaestro.IMaestrosService" name="WSHttpBinding_IMaestrosService">
       </endpoint>
-      <endpoint address="https://endesafews/AfipWrapperService.svc" 
-        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAfipWrapperService"
-        contract="ServiceReferenceAfipWrapper.IAfipWrapperService" name="WSHttpBinding_IAfipWrapperService">    
+      <endpoint address="https://endesafews/AfipWrapperService.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAfipWrapperService" contract="ServiceReferenceAfipWrapper.IAfipWrapperService" name="WSHttpBinding_IAfipWrapperService">
       </endpoint>
     </client>
-    
+
     <diagnostics>
-      <messageLogging logEntireMessage="true"
-        maxMessagesToLog="300" logMessagesAtServiceLevel="true"
-        logMalformedMessages="true" logMessagesAtTransportLevel="true"/>
+      <messageLogging logEntireMessage="true" maxMessagesToLog="300" logMessagesAtServiceLevel="true" logMalformedMessages="true" logMessagesAtTransportLevel="true"/>
     </diagnostics>
-    
+
   </system.serviceModel>
 
   <system.diagnostics>
@@ -111,10 +86,9 @@
       </source>
     </sources>
     <sharedListeners>
-      <add initializeData="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\WcfTrace\serviceclient2.svclog"
-    type="System.Diagnostics.XmlWriterTraceListener" name="xml"/>
+      <add initializeData="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\WcfTrace\serviceclient2.svclog" type="System.Diagnostics.XmlWriterTraceListener" name="xml"/>
     </sharedListeners>
     <trace autoflush="true"/>
   </system.diagnostics>
 
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
